Infrastructure: add example benchmark code for cmake (#6723)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
Add example benchmark code. Can benchmark whole methods or just part of
a method pretty easily.
#### Motivation for adding to Mudlet
So developers have an easy way to compare speed of old/new code and thus
have an easier time keeping Mudlet quick.
#### Other info (issues closed, discussion etc)
I also tried adding it to
https://wiki.mudlet.org/w/Relevant_Developer_Tutorials but after having
spent too long fighting with mediawiki's translatable page, I gave up.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -525,6 +525,8 @@ target_link_libraries(
         PUGIXML::PUGIXML
         ZIP::ZIP
         ZLIB::ZLIB
+# PLACEMARKER: sample benchmarking code
+#       nanobench
         ${QT_LIBS})
 
 if(USE_UPDATER)
