--- a/.github/workflows/qridlayout-ordering.yml
+++ b/.github/workflows/qridlayout-ordering.yml
@@ -1,7 +1,6 @@
 name: QGridLayout Items Ordering
 
 on:
-  push:
   pull_request_target:
     types: [opened, synchronize, reopened, edited]
 
@@ -22,4 +21,5 @@ jobs:
           node CI/fix.grid.ui.ordering.js
       - name: Add & Commit
         uses: EndBug/add-and-commit@v9.1.1
-        message: "Standarize UI files"
+        with:
+          message: "Standarize UI files"
