--- a/.github/workflows/qridlayout-ordering.yml
+++ b/.github/workflows/qridlayout-ordering.yml
@@ -24,3 +24,4 @@ jobs:
         uses: EndBug/add-and-commit@v9.1.1
         with:
           message: "Standarize UI files"
+          add: "src/UI"
