generate changelog as MD

--- a/.github/workflows/generate-changelog.yml
+++ b/.github/workflows/generate-changelog.yml
@@ -19,6 +19,10 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.repository_owner == 'Mudlet' }}
 
+    strategy:
+      matrix:
+        format: ["html", "md"]
+
     steps:
     - name: Checkout Mudlet repository
       uses: actions/checkout@v3
@@ -59,15 +63,15 @@ jobs:
 
     - name: Generate changelog
       run: |
-        changelog=$(lua CI/generate-changelog.lua -m release --start-commit $FROM_RELEASE --end-commit $TO_RELEASE)
-        echo "$changelog" >> changelog.html
+        changelog=$(lua CI/generate-changelog.lua -f ${{matrix.format}} -m release --start-commit $FROM_RELEASE --end-commit $TO_RELEASE)
+        echo "$changelog" >> changelog.${{matrix.format}}
 
         echo "[INFO] Changelog generated (from $FROM_RELEASE to $TO_RELEASE). If it's too big, Github won't show it, so it's available as an artifact as well at: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}#artifacts"
         echo "[INFO] Changelog is:"
         echo $changelog
 
-    - name: Upload changelog as html
+    - name: Upload changelog as ${{matrix.format}}
       uses: actions/upload-artifact@v3
       with:
-        name: changelog.html
-        path: changelog.html
+        name: changelog.${{matrix.format}}
+        path: changelog.${{matrix.format}}
