--- a/.github/workflows/qridlayout-ordering.yml
+++ b/.github/workflows/qridlayout-ordering.yml
@@ -13,6 +13,7 @@ jobs:
           ref: ${{github.event.pull_request.head.ref}}
           repository: ${{github.event.pull_request.head.repo.full_name}}
           fetch-depth: 0
+          token: ${{secrets.GH_PAT_SORT_UIFILES}}
       - name: Use Node.js
         uses: actions/setup-node@v3
       - name: Install yarn dependencies
