--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -127,6 +127,7 @@ jobs:
         # run it now as we need libraries to be present when moving them around in the "non-vcpkg dependencies" step later on
         runVcpkgInstall: true
         vcpkgJsonGlob: "**/vcpkg.json"
+        configurePreset: 'Release'
 
     - name: (macOS) Install non-vcpkg dependencies (2/2)
       if: runner.os == 'macOS'
