--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -279,7 +279,7 @@ jobs:
       with:
         # enable for a debug build (1/2)
         # buildPresetAdditionalArgs: --config RelWithDebInfo
-        configurePreset: 'Release'
+        buildPreset: 'Release'
         configurePresetAdditionalArgs: >-
           -DCMAKE_PREFIX_PATH=${{env.MINGW_BASE_DIR}}
           -DVCPKG_APPLOCAL_DEPS=OFF
