--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -280,6 +280,7 @@ jobs:
         # enable for a debug build (1/2)
         # buildPresetAdditionalArgs: --config RelWithDebInfo
         buildPreset: 'Release'
+        configurePreset: 'Release'
         configurePresetAdditionalArgs: >-
           -DCMAKE_PREFIX_PATH=${{env.MINGW_BASE_DIR}}
           -DVCPKG_APPLOCAL_DEPS=OFF
