Format configurePresetAdditionalArgs differently

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -281,9 +281,7 @@ jobs:
         # buildPresetAdditionalArgs: --config RelWithDebInfo
         buildPreset: 'Release'
         configurePreset: 'Release'
-        configurePresetAdditionalArgs: >-
-          -DCMAKE_PREFIX_PATH=${{env.MINGW_BASE_DIR}}
-          -DVCPKG_APPLOCAL_DEPS=OFF
+        configurePresetAdditionalArgs: "['-DCMAKE_PREFIX_PATH=${{env.MINGW_BASE_DIR}}', '-DVCPKG_APPLOCAL_DEPS=OFF']"
       env:
         NINJA_STATUS: '[%f/%t %o/sec] '
 
