--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ qrc_*.cpp
 *.qm
 *.autosave
 mudlet
+app-build.txt
 
 # ignore macOS apps in general, but keep the Autoupdater from Sparkle
 3rdparty/boost/*
