Fixed typo in test\CMakeLists.txt for FormattingTagsTest

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -83,7 +83,7 @@ add_executable(TMxpVersionTagTest TMxpVersionTagTest.cpp ../src/TMxpVersionTagHa
 add_test(NAME TMxpVersionTagTest COMMAND TMxpVersionTagTest)
 
 add_executable(TMxpFormattingTagsTest TMxpFormattingTagsTest.cpp ../src/TMxpFormattingTagsHandler.cpp ../src/TMxpTagParser.cpp ../src/TMxpNodeBuilder.cpp ../src/MxpTag.cpp ../src/TStringUtils.cpp ../src/TMxpTagHandler.cpp)
-add_test(NAME TMxpFormattingTagsTest COMMAND TMxpFormattingsTagTest)
+add_test(NAME TMxpFormattingTagsTest COMMAND TMxpFormattingTagsTest)
 
 add_executable(TLuaInterfaceTest TLuaInterfaceTest.cpp ../src/LuaInterface.cpp ../src/TVar.cpp ../src/VarUnit.cpp)
 add_test(NAME TLuaInterfaceTest COMMAND TLuaInterfaceTest)
