Add LTO to make Mudlet quicker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,3 +228,7 @@ if(USE_UPDATER)
   endif()
 
 endif()
+
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELEASE -O3)  
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_DEBUG -O0)
