--- a/.github/workflows/performance-analysis.yml
+++ b/.github/workflows/performance-analysis.yml
@@ -2,7 +2,7 @@ name: "Performance analysis"
 
 on:
   push:
-    branches: development
+  #  branches: development
   workflow_dispatch:
 
 jobs:
@@ -40,7 +40,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install build-essential git liblua5.1-dev zlib1g-dev libhunspell-dev libpcre3-dev \
           libzip-dev libboost-graph-dev libyajl-dev libpulse-dev lua-rex-pcre lua-filesystem lua-zip \
-          lua-sql-sqlite3 qtmultimedia5-dev qttools5-dev luarocks ccache libpugixml-dev cmake -y
+          lua-sql-sqlite3 qtmultimedia5-dev qttools5-dev luarocks ccache libpugixml-dev cmake ninja-build -y
 
         sudo luarocks install luautf8
         sudo luarocks install lua-yajl YAJL_LIBDIR=`find /usr -name "libyajl.so" -printf '%h\n'` YAJL_INCDIR=/usr/include
@@ -56,15 +56,15 @@ jobs:
 
     - name: Build Mudlet
       run : |
-        WITH_UPDATER=NO WITH_3DMAPPER=NO qmake ./src/mudlet.pro
-        make -j $(expr `nproc` - 1)
+        WITH_UPDATER=NO WITH_3DMAPPER=NO cmake --build ${{github.workspace}}/build -G Ninja
+        ninja
 
     - name: Check ccache stats post build
       if: runner.os == 'Linux' || runner.os == 'macOS'
       run: ccache --show-stats
 
     - name: Copy mudlet executable in place for executing display benchmark
-      run: cp ${{github.workspace}}/mudlet ${{github.workspace}}/src
+      run: cp ${{github.workspace}}/build/mudlet ${{github.workspace}}/src
       shell: bash
 
     - name: Remove Mudlet config directory
