Just build the source where it is

--- a/.github/workflows/performance-analysis.yml
+++ b/.github/workflows/performance-analysis.yml
@@ -56,8 +56,10 @@ jobs:
 
     - name: Build Mudlet
       run : |
-        WITH_UPDATER=NO WITH_3DMAPPER=NO cmake -G Ninja --build ${{github.workspace}}/build
+        WITH_UPDATER=NO WITH_3DMAPPER=NO cmake -G Ninja
         ninja
+        sudo apt-get install tree -y
+        tree
 
     - name: Check ccache stats post build
       if: runner.os == 'Linux' || runner.os == 'macOS'
