Run ninja in the build folder

--- a/.github/workflows/performance-analysis.yml
+++ b/.github/workflows/performance-analysis.yml
@@ -57,6 +57,7 @@ jobs:
     - name: Build Mudlet
       run : |
         WITH_UPDATER=NO WITH_3DMAPPER=NO cmake -DCMAKE_BUILD_TYPE=Release -S${{github.workspace}} -B${{github.workspace}}/build -G Ninja
+        cd {{github.workspace}}/build
         ninja -j $(expr `nproc` - 1)
 
     - name: Check ccache stats post build
