--- a/.github/workflows/performance-analysis.yml
+++ b/.github/workflows/performance-analysis.yml
@@ -68,6 +68,10 @@ jobs:
       if: runner.os == 'Linux' || runner.os == 'macOS'
       run: ccache --show-stats
 
+    - name: Copy mudlet executable in place for executing display benchmark
+      run: cp ${{github.workspace}}/build/src/mudlet ${{github.workspace}}/src
+      shell: bash
+
     - name: Remove Mudlet config directory
       run: rm -rf $HOME/.config/mudlet
       shell: bash
