Remove --debug-find

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -273,7 +273,7 @@ jobs:
       with:
         configurePreset: 'ninja-vcpkg-multi'
         buildPreset: 'ninja-vcpkg-release'
-        configurePresetAdditionalArgs: "['-DCMAKE_PREFIX_PATH=${{env.MINGW_BASE_DIR}}', '-DVCPKG_APPLOCAL_DEPS=OFF', '--debug-find']"
+        configurePresetAdditionalArgs: "['-DCMAKE_PREFIX_PATH=${{env.MINGW_BASE_DIR}}', '-DVCPKG_APPLOCAL_DEPS=OFF']"
       env:
         NINJA_STATUS: '[%f/%t %o/sec] '
 
