--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -168,6 +168,10 @@ jobs:
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
+      with:
+        category: "/language:${{ matrix.language }}"
+        upload: false
+        output: sarif-results
 
     - name: Filter out 3rdparty dependencies
       uses: advanced-security/filter-sarif@v1
