--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -120,6 +120,7 @@ set(mudlet_SRCS
     TMapLabel.cpp
     TMainConsole.cpp
     TMedia.cpp
+    TMediaPlaylist.cpp
     TMxpElementDefinitionHandler.cpp
     TMxpElementRegistry.cpp
     TMxpFormattingTagsHandler.cpp
@@ -142,6 +143,7 @@ set(mudlet_SRCS
     TMxpTagProcessor.cpp
     TMxpVarTagHandler.cpp
     TMxpVersionTagHandler.cpp
+    TPlaylistFileParser.cpp
     TriggerUnit.cpp
     TRoom.cpp
     TRoomDB.cpp
@@ -279,6 +281,7 @@ set(mudlet_HDRS
     TMapLabel.h
     TMatchState.h
     TMedia.h
+    TMediaPlaylist.h
     TMxpBRTagHandler.h
     TMxpClient.h
     TMxpColorTagHandler.h
@@ -303,6 +306,7 @@ set(mudlet_HDRS
     TMxpSupportTagHandler.cpp
     TMxpVarTagHandler.h
     TMxpVersionTagHandler.h
+    TPlaylistFileParser.h
     Tree.h
     TriggerUnit.h
     TRoom.h
