--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -138,7 +138,7 @@ jobs:
         # these are installed but they don't seem to be includable in our application nowadays
         brew reinstall libzip zstd
         # these aren't available or don't work well in vcpkg
-        brew install libzzip libzip zstd ccache luarocks expect mitchellh/gon/gon
+        brew install libzzip ccache luarocks expect mitchellh/gon/gon
 
         echo "/usr/local/opt/ccache/libexec" >> $GITHUB_PATH
         echo "CCACHE_DIR=${{runner.workspace}}/ccache" >> $GITHUB_ENV
