--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -106,11 +106,15 @@ jobs:
       env:
         HOMEBREW_NO_ANALYTICS: "ON"
         HOMEBREW_NO_AUTO_UPDATE: "ON"
-        HOMEBREW_NO_BOTTLE_SOURCE_FALLBACK: "ON"
+        # Now default since https://github.com/Homebrew/brew/pull/10640
+        # HOMEBREW_NO_BOTTLE_SOURCE_FALLBACK: "ON"
         HOMEBREW_NO_INSTALL_CLEANUP: "ON"
       run: |
         # dependencies needed for vcpkg specifically
         brew install automake autoconf pkg-config
+        # Temporary 2 extra things to debug an issue, see https://github.com/Mudlet/Mudlet/pull/6998
+        brew doctor
+        brew config
 
     - name: (Linux) Install non-vcpkg dependencies (1/2)
       if: runner.os == 'Linux'
@@ -132,7 +136,8 @@ jobs:
       env:
         HOMEBREW_NO_ANALYTICS: "ON"
         HOMEBREW_NO_AUTO_UPDATE: "ON"
-        HOMEBREW_NO_BOTTLE_SOURCE_FALLBACK: "ON"
+        # Now default since https://github.com/Homebrew/brew/pull/10640
+        # HOMEBREW_NO_BOTTLE_SOURCE_FALLBACK: "ON"
         HOMEBREW_NO_INSTALL_CLEANUP: "ON"
       run: |
         # these are installed but they don't seem to be includable in our application nowadays
